# zorch

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md
.opencode/: opencode.json
.opencode/commands/: executor-next.md  next-task.md  update-project-features.md
apps/admin/: README.md  package-lock.json  package.json  tailwind.config.ts
apps/admin/app/: globals.css  layout.tsx  page.tsx
apps/admin/app/analytics/: page.tsx
apps/admin/app/api-keys/: page.tsx
apps/admin/app/api-keys/[id]/edit/: page.tsx
apps/admin/app/api-keys/new/: page.tsx
apps/admin/app/api/[...path]/: route.ts
apps/admin/app/dashboard/: page.tsx
apps/admin/app/middleware/: page.tsx
apps/admin/app/middleware/[id]/edit/: page.tsx
apps/admin/app/middleware/new/: page.tsx
apps/admin/app/middleware/runs/: page.tsx
apps/admin/app/models/: page.tsx
apps/admin/app/models/[id]/edit/: page.tsx
apps/admin/app/models/[id]/targets/: page.tsx
apps/admin/app/models/new/: page.tsx
apps/admin/app/pricing/: page.tsx
apps/admin/app/providers/: page.tsx
apps/admin/app/providers/[id]/: page.tsx
apps/admin/app/providers/[id]/edit/: page.tsx
apps/admin/app/providers/new/: page.tsx
apps/admin/app/settings/: page.tsx
apps/admin/components/: ChartCard.tsx  ErrorMessage.tsx  LoadingSpinner.tsx  MetricCard.tsx  ModelPickerDialog.tsx  ModelPricingSection.tsx  PageHeader.tsx  TagInput.tsx  sidebar.tsx  theme-provider.tsx
apps/admin/components/api-keys/: ApiKeyForm.tsx  ApiKeyMiddlewareBinding.tsx  TagEditor.tsx
apps/admin/components/middleware/: MiddlewareForm.tsx  MiddlewareRunPanel.tsx
apps/admin/components/models/: ModelForm.tsx
apps/admin/components/providers/: ProviderForm.tsx  ProviderKeysSection.tsx  ProviderTargetsSection.tsx
apps/admin/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  confirm-dialog.tsx  dialog.tsx  dropdown-menu.tsx  empty-state.tsx  input.tsx  sheet.tsx  table.tsx  toast.tsx
apps/admin/lib/: api.ts  useFetchData.ts  useMutationWithFeedback.ts
crates/zorch-api/: Cargo.toml
crates/zorch-api/src/: lib.rs  main.rs
crates/zorch-api/src/middleware/: auth.rs  inspector.rs  mod.rs  request_id.rs  timeout.rs
crates/zorch-api/src/routes/: docs.rs  health.rs  mod.rs
crates/zorch-api/src/routes/admin/: analytics.rs  api_keys.rs  config.rs  dashboard.rs  middleware.rs  mod.rs  model_targets.rs  models.rs  pricing.rs  provider_api_keys.rs  provider_models.rs  provider_target_models.rs  providers.rs  providers_state.rs  types.rs
crates/zorch-api/src/routes/v1/: mod.rs
crates/zorch-api/src/routes/v1/proxy/: governance.rs  mod.rs  model.rs  request.rs  usage.rs
crates/zorch-api/src/server/: mod.rs  providers.rs
crates/zorch-cache/: Cargo.toml
crates/zorch-cache/src/: lib.rs  model_provider_cache.rs  sticky_target_key_cache.rs
crates/zorch-db/: Cargo.toml
crates/zorch-db/src/: lib.rs  models.rs  pool.rs
crates/zorch-gateway/: Cargo.toml
crates/zorch-gateway/src/: access_window.rs  billing.rs  circuit_breaker.rs  governance.rs  key_limits.rs  lib.rs  pipeline.rs  pricing.rs  rate_limit.rs
crates/zorch-gateway/src/middleware/: audit.rs  engine.rs  mod.rs  rhai_runtime.rs  types.rs
crates/zorch-gateway/src/middleware/plugins/: mod.rs  prompt_injector.rs  request_blocker.rs  sensitive_marker.rs  token_reducer.rs
crates/zorch-inspector/: Cargo.toml
crates/zorch-inspector/src/: clickhouse.rs  config.rs  hook.rs  lib.rs  metadata.rs
crates/zorch-providers/: Cargo.toml
crates/zorch-providers/src/: auth_headers.rs  errors.rs  http_client.rs  lib.rs  model_resolver.rs  proxy.rs  registry.rs  selector.rs
crates/zorch-shared/: Cargo.toml
crates/zorch-shared/src/: config.rs  crypto.rs  errors.rs  lib.rs  macros.rs  types.rs
crates/zorch-telemetry/: Cargo.toml
crates/zorch-telemetry/src/: lib.rs  metrics.rs  tracing.rs
docker/: Dockerfile  Dockerfile.web  docker-compose.prod.yml  docker-compose.yml
docker/init-scripts/: clickhouse-init.sql
docs/: middleware.md  project_state.yaml  provider-setup.md  security.md
docs/plans/: dynamic-pricing-engine.md  persist-gateway-rejections.md
docs/plans/archived/: per-key-governance-enforcement-2026-06-18.md
migrations/: 00000000000001_init.sql  00000000000002_rhai_middleware.sql  00000000000003_fix_prompt_injector.sql  00000000000004_latency_breakdown.sql  00000000000005_fix_token_reducer.sql  20240613000001_create_organizations.sql  20240613000003_create_api_keys.sql  20240613000004_create_providers.sql  20240613000005_create_requests_log.sql  20240613000006_add_provider_model_pricing.sql  20240613000007_add_api_key_governance_columns.sql  20240613000008_rename_provider_model_pricing_to_provider_model_config.sql  20240617000001_add_api_key_name.sql  20240617000002_add_provider_fk_to_provider_model_config.sql  20240617000003_rename_cost_per_1k_to_per_1m.sql  20240617000004_add_middleware_tables.sql  20240620000001_add_api_key_tags_and_access_window.sql  20240620000002_add_requests_log_error_message.sql
tests/: middleware-smoke-test.sh  smoke-test.sh
