[workspace]
resolver = "2"
members = [
    "crates/zorch-shared",
    "crates/zorch-db",
    "crates/zorch-cache",
    "crates/zorch-telemetry",
    "crates/zorch-providers",
    "crates/zorch-inspector",
    "crates/zorch-gateway",
    "crates/zorch-api",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "migrate"] }
axum = "0.7"

reqwest = { version = "0.12", features = ["json", "stream"] }
http = "1.1"
async-trait = "0.1"
regex = "1"
redis = { version = "0.25", features = ["tokio-comp"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
clickhouse = { version = "0.11", features = ["uuid", "time"] }
utoipa = "4.2"
bytes = "1.6"
thiserror = "1.0"
blake3 = "1.5"
futures-util = "0.3"
aes-gcm = "0.10"
generic-array = "0.14"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
config = "0.14"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.24"
opentelemetry = "0.23"
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16", features = ["tokio", "trace", "metrics"] }
hex = "0.4"
arc-swap = "1.7"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
chrono-tz = "0.9"

[profile.release]
opt-level = 3
lto = true
