[package]
name = "zorch-api"
version = "0.1.0"
edition = "2021"
description = "Axum server for Zorch AI Key Orchestration Platform"
license = "MIT"

[dependencies]
zorch-shared = { path = "../zorch-shared" }
zorch-db = { path = "../zorch-db" }
zorch-telemetry = { path = "../zorch-telemetry" }
zorch-providers = { path = "../zorch-providers" }
zorch-inspector = { path = "../zorch-inspector" }
zorch-gateway = { path = "../zorch-gateway" }
zorch-cache = { path = "../zorch-cache" }

async-trait = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

sqlx = { workspace = true }

utoipa = { workspace = true }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
futures-util = { workspace = true }
sha2 = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
arc-swap = { workspace = true }
redis = { workspace = true }
bytes = { workspace = true }
chrono-tz = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-test = "0.2"
