[package]
name = "zorch-db"
version = "0.1.0"
edition = "2021"

[dependencies]
zorch-shared = { path = "../zorch-shared" }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
