[package]
name = "zorch-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
zorch-shared = { path = "../zorch-shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
redis = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
chrono-tz = { workspace = true }
