[package]
name = "zorch-inspector"
version = "0.1.0"
edition = "2021"

[dependencies]
zorch-shared = { path = "../zorch-shared" }
clickhouse = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
time = "0.3"
