[package]
name = "zorch-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }

serde = { workspace = true }
serde_json = { workspace = true }

config = { workspace = true }

uuid = { workspace = true }

axum = { workspace = true, features = ["macros"] }
http = { workspace = true }

tracing = { workspace = true }

utoipa = { workspace = true }

aes-gcm = { workspace = true }
generic-array = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
