[package]
name = "zorch-telemetry"
version = "0.1.0"
edition = "2021"
description = "Telemetry and tracing for Zorch AI Key Orchestration Platform"
license = "MIT"

[dependencies]
zorch-shared = { path = "../zorch-shared" }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }

opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

metrics = { version = "0.24" }
metrics-exporter-prometheus = { version = "0.16" }

tokio = { workspace = true }
